--- a/package.json
+++ b/package.json
@@ -6,10 +6,25 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.0-beta1",
+    "framer-motion": "^6.3.7",
+    "lottie-web": "^5.9.4",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "react-parallax-tilt": "^1.7.38",
+    "react-pdf": "^5.7.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
+    "react-tsparticles": "^2.0.6",
+    "tsparticles": "^2.0.6",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
